@@ -38,6 +38,7 @@ Ver.4.6 (in development)
 - [BUG FIX] FileMaker_FX didn't respond collectively in case of email as user name.
 - [BUG FIX] Revert MediaAccess.php partly to fix showing images of FileMaker's container fields. The affected version 
   is 4.5 only (Thanks to Kentaro Suzuki).
+- [BUG FIX] Fix applying the data converter to the fields of the 'view' table when using FileMaker Server.
 
 Ver.4.5 (2014/9/15)
 - Sync with multiple clients in update/insert/delete with Pusher. (except for FileMaker's portal=>true context)
